--- a/index.html
+++ b/index.html
@@ -7,7 +7,31 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
+	<!-- Menú -->
+	<nav class="navbar navbar-inverse navbar-static-top">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">Congreso</a>
+	    	</div>
+	    	<!-- Collect the nav links, forms, and other content for toggling -->
+	    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	    		<ul class="nav navbar-nav pull-right">
+	    			<li class="active"><a href="#">Bienvenida</a></li>
+	    			<li><a href="#">Oradores</a></li>
+	    			<li><a href="#">Agenda</a></li>
+	    			<li><a href="#">Contacto</a></li>
+	    			<li><a href="#">Entradas</a></li>
+	    		</ul>
+	    	</div><!-- /.navbar-collapse -->
+    	</div><!-- /.container-fluid -->
+	</nav>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
