Imagen inicial e intro

--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
 	    	</div><!-- /.navbar-collapse -->
     	</div><!-- /.container-fluid -->
 	</nav>
+	<!-- Imagen -->
+	<section id="bg-image"></section>
+	<!-- Intro -->
+	<section id="intro">
+		<div class="container">
+			<div class="col-md-6 col-xs-12">
+				<img src="img/speaker.jpg" alt="" class="welcomeImage">
+			</div>
+			<div class="col-md-6 col-xs-12">
+				<h2>Bienvenido al Congreso XX de Museos y Cultura</h2>
+				<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat tempore repudiandae voluptates voluptate provident harum, doloremque rerum. Deleniti libero rerum facilis quos ipsa voluptate provident ipsam, quo, nemo suscipit natus.</p>
+				<button class="btn-general action1">Comprar entrada</button>
+			</div>	
+		</div>	
+	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
