Texto en imagen inicial

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Congreso</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300,400,700,800" rel="stylesheet">
 </head>
 <body>
 	<!-- Menú -->
@@ -33,15 +34,20 @@
     	</div><!-- /.container-fluid -->
 	</nav>
 	<!-- Imagen -->
-	<section id="bg-image"></section>
+	<section id="bg-image">
+		<div class="bg-filter"></div>
+		<div class="col-md-12 front">
+			<div class="title"><p class="lightTitle">6to Congreso Internacional</p> Lean Six Sigma</div>
+		</div>
+	</section>
 	<!-- Intro -->
 	<section id="intro">
 		<div class="container">
 			<div class="col-md-6 col-xs-12">
-				<img src="img/speaker.jpg" alt="" class="welcomeImage">
+				<img src="img/speaker.jpg" alt="" class="welcomeImage img-responsive">
 			</div>
 			<div class="col-md-6 col-xs-12">
-				<h2>Bienvenido al Congreso XX de Museos y Cultura</h2>
+				<h2>Bienvenidos</h2>
 				<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat tempore repudiandae voluptates voluptate provident harum, doloremque rerum. Deleniti libero rerum facilis quos ipsa voluptate provident ipsam, quo, nemo suscipit natus.</p>
 				<button class="btn-general action1">Comprar entrada</button>
