Datos del congreso / Numbers

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300,400,700,800" rel="stylesheet">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
 	<!-- Menú -->
@@ -56,29 +57,32 @@
 	</section>
 	<!-- Numbers -->
 	<section id="numbers">
-		<div class="container">
-			<div class="col-md-3 col-xs-6">
-				<i class="iconData"></i>
-				<p></p>
-				<p class="number"></p>
-			</div>
-			<div class="col-md-3 col-xs-6">
-				<i class="iconData"></i>
-				<p></p>
-				<p class="number"></p>
-			</div>
-			<div class="col-md-3 col-xs-6">
-				<i class="iconData"></i>
-				<p></p>
-				<p class="number"></p>
-			</div>
-			<div class="col-md-3 col-xs-6">
-				<i class="iconData"></i>
-				<p></p>
-				<p class="number"></p>
+		<div class="bg-image2">
+			<div class="container">
+				<div class="col-md-3 col-xs-6 data">
+					<p class="iconData"><i class="fa fa-microphone fa-5x" aria-hidden="true"></i></p>
+					<p class="category">Oradores</p>
+					<p class="number">20</p>
+				</div>
+				<div class="col-md-3 col-xs-6 data">
+					<p class="iconData"><i class="fa fa-lightbulb-o fa-5x" aria-hidden="true"></i></p>
+					<p class="category">Participantes</p>
+					<p class="number">20</p>
+				</div>
+				<div class="col-md-3 col-xs-6 data">
+					<p class="iconData"><i class="fa fa-cogs fa-5x" aria-hidden="true"></i></p>
+					<p class="category">Talleres</p>
+					<p class="number">20</p>
+				</div>
+				<div class="col-md-3 col-xs-6 data">
+					<p class="iconData"><i class="fa fa-coffee fa-5x" aria-hidden="true"></i></p>
+					<p class="category">Tazas de café</p>
+					<p class="number">20</p>
+				</div>
 			</div>
 		</div>
 	</section>
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
