primera version agenda y entradas

--- a/index.html
+++ b/index.html
@@ -82,8 +82,182 @@
 			</div>
 		</div>
 	</section>
-	
+	<!-- Agenda -->
+	<section id="agenda">
+		<div class="container">
+			<div class="tab">
+				<!-- Nav tabs -->
+				<ul class="nav nav-tabs" role="tablist">
+					<li role="presentation" class="active"><a href="#talleres" aria-controls="home" role="tab" data-toggle="tab">Talleres</a></li>
+					<li role="presentation"><a href="#conferencias" aria-controls="profile" role="tab" data-toggle="tab">Conferencias</a></li>
+				</ul>
+				<!-- Tab panels -->
+				<div class="tab-content">
+					<!-- Talleres -->
+					<div role="tabpanel" class="tab-pane active" id="talleres">
+						<div class="well table-responsive">
+						    <table class="table table-striped">
+						    	<thead>
+									<tr>
+								        <th class="col-md-1">#</th>
+								        <th class="col-md-2"></th>
+										<th class="col-md-3">Tallerista</th>
+										<th class="col-md-4">Taller</th>
+										<th class="col-md-2">Hora</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>1</td>
+										<td></td>
+										<td>Leoncio Castillo</td>
+										<td>Rapid Problem Solving</td>
+										<td>08:30 - 10:30</td>
+									</tr>
+									<tr>
+										<td>2</td>
+										<td></td>
+										<td>Alma Loera</td>
+										<td>VALUE STREAM MAPPING FOR SERVICE PROCESSES</td>
+										<td>10:30 - 12:30</td>
+									</tr>
+									<tr>
+										<td>3</td>
+										<td></td>
+										<td>José Solis</td>
+										<td>PLANNING YOUR LEAN JOURNING: USING THE X MATRIX</td>
+										<td>08:30 - 10:30</td>
+									</tr>
+									<tr>
+										<td>4</td>
+										<td></td>
+										<td>Luis Enrique Romero</td>
+										<td>EFFECTIVE VISUAL MANAGEMENT WITH KAMISHIBAI CARDS</td>
+										<td>08:30 - 10:30</td>
+									</tr>
+						      	</tbody>
+						    </table>
+						</div>
+					</div>
+					<!-- Conferencias -->
+					<div role="tabpanel" class="tab-pane" id="conferencias">
+						<div class="well table-responsive">
+						    <table class="table table-striped">
+						    	<thead>
+									<tr>
+								        <th class="col-md-1">#</th>
+								        <th class="col-md-2"></th>
+										<th class="col-md-3">Orador</th>
+										<th class="col-md-4">Conferencia</th>
+										<th class="col-md-2">Hora</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>1</td>
+										<td></td>
+										<td>Juan Esquivel</td>
+										<td>LESSONS FROM THE FIELD: APPLYING LEAN TO IMPROVE THE HR FUNCTION</td>
+										<td>13:00 - 14:00</td>
+									</tr>
+									<tr>
+										<td>2</td>
+										<td></td>
+										<td>Alejandro Martínez</td>
+										<td>COACHING: A TOOL TO DEVELOP LEADERS</td>
+										<td>14:00 - 15:00</td>
+									</tr>
+									<tr>
+										<td>3</td>
+										<td></td>
+										<td>Ian Monrroy</td>
+										<td>INNOVATION: HOW TO AWAKE THE COLLECTIVE CREATIVITY TO IMPROVE PROCESS</td>
+										<td>15:30 - 16:30</td>
+									</tr>
+									<tr>
+										<td>4</td>
+										<td></td>
+										<td>Ed Bojorquez</td>
+										<td>THE SUCCESS FACTOR: OUR ABILITY TO SUSTEAIN IMPROVEMENTS</td>
+										<td>16:30 - 17:30</td>
+									</tr>
+									<tr>
+										<td>5</td>
+										<td></td>
+										<td>Isela Vargas</td>
+										<td>ISO 18404 E ISO 13053 A STANDARD FOR PROCESS IMPROVEMENT</td>
+										<td>10:30 - 12:30</td>
+									</tr>
+						        </tbody>
+						    </table>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="text-center"><button class="btn-general action2">Descargar Programa</button></div>
+		</div>	
+	</section>
+	<!-- Prices -->
+	<!-- Best Price -->
+	<section id="tickets">
+		<div class="bg-image3">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h2 class="text-center">Entradas</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 col-xs-12">
+						<div class="ticketsPrices">
+							<div class="price text-center">
+								<p class="bold">$240</p>
+							</div>
+							<div class="titlePrice text-center">
+								<p class="bold">Entrada 1</p>
+							</div>
+							<div class="description text-center">
+								<p>Antes del 20 de Octubre</p>
+								<div class="text-center"><button class="action3">Comprar ahora</button></div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-xs-12">
+						<div class="ticketsPrices">
+							<div class="price text-center">
+								<p class="bold">$200</p>
+							</div>
+							<div class="titlePrice text-center">
+								<p class="bold">Entrada 2</p>
+							</div>
+							<div class="description text-center">
+								<p>Antes del 20 de Octubre</p>
+								<div class="text-center"><button class="action3">Comprar ahora</button></div>
+							</div>
+						</div>
+					</div>	
+					<div class="col-md-4 col-xs-12">
+						<div class="ticketsPrices">
+							<div class="price text-center">
+								<p class="bold">$140</p>
+							</div>
+							<div class="titlePrice text-center">
+								<p class="bold">Entrada 3</p>
+							</div>
+							<div class="description text-center">
+								<p>Antes del 20 de Octubre</p>
+								<div class="text-center"><button class="action3">Comprar ahora</button></div>
+							</div>
+						</div>
+					</div>		
+				</div>
+			</div>
+		</div>
+	</section>
+
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
