Fix carousel/ add fonts glyphicons/resize images

--- a/index.html
+++ b/index.html
@@ -34,11 +34,52 @@
 	    	</div><!-- /.navbar-collapse -->
     	</div><!-- /.container-fluid -->
 	</nav>
-	<!-- Imagen -->
-	<section id="bg-image">
-		<div class="bg-filter"></div>
-		<div class="col-md-12 front">
-			<div class="title"><p class="lightTitle">6to Congreso Internacional</p> Lean Six Sigma</div>
+	<!-- Carousel -->
+	<section id="carousel">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1" class></li>
+				<li data-target="#myCarousel" data-slide-to="2" class></li>
+			</ol>
+			<div class="carousel-inner filter">
+				<!-- Primer Slide -->
+				<div class="item active">
+					<img src="img/logo.jpg" alt="">
+					<div class="container">
+						<div class="carousel-caption">
+							<h1></h1>
+						</div>
+					</div>
+				</div>
+				<!-- SegundoSlide -->
+				<div class="item">
+					<div class="bg-filter1"></div>
+					<img src="img/event-1597531_1280.jpg" alt="">
+					<div class="container">
+						<div class="carousel-caption">
+							<div class="title"><p class="lightTitle">6to Congreso Internacional</p> Lean Six Sigma</div>
+						</div>
+					</div>
+				</div>
+				<!-- Tercer Slide -->
+				<div class="item">
+					<div class="bg-filter2"></div>
+					<img src="img/wtcTijuana.jpeg" alt="">
+					<div class="container">
+						<div class="carousel-caption">
+							<h1>La innovación es lo que dsitingue a un líder de los demás.</h1>
+							<h2>Steve Jobs</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+			<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left"></span>
+			</a>
+			<a class="right carousel-control" href="#myCarousel" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right"></span>
+			</a>
 		</div>
 	</section>
 	<!-- Intro -->
@@ -198,7 +239,6 @@
 		</div>	
 	</section>
 	<!-- Prices -->
-	<!-- Best Price -->
 	<section id="tickets">
 		<div class="bg-image3">
 			<div class="container">
@@ -254,8 +294,7 @@
 			</div>
 		</div>
 	</section>
-
-
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/main.js"></script>
