--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<!-- Talleres -->
 					<div role="tabpanel" class="tab-pane active" id="talleres">
 						<div class="well table-responsive">
-						    <table class="table table-striped">
+						    <table class="table">
 						    	<thead>
 									<tr>
 								        <th class="col-md-1">#</th>
@@ -294,7 +294,29 @@
 			</div>
 		</div>
 	</section>
-	
+	<!-- Footer -->
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="text-center socialIcons">
+						<span class="fa-stack fa-lg">
+						  <i class="fa fa-circle fa-stack-2x"></i>
+						  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+						</span>
+						<span class="fa-stack fa-lg">
+						  <i class="fa fa-circle fa-stack-2x"></i>
+						  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+						</span>
+						
+					</div>
+				</div>
+				<div class="col-md-4">
+					<p><i class="fa fa-copyright" aria-hidden="true"></i> Copyright</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/main.js"></script>
