--- a/index.html
+++ b/index.html
@@ -294,6 +294,12 @@
 			</div>
 		</div>
 	</section>
+	<!-- Map -->
+	<section id="location">
+		<div id="map text-center">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3365.1822769776063!2d-116.936409!3d32.494557!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8cae59169abc3847!2sWorld+Trade+Center+Tijuana!5e0!3m2!1ses!2sus!4v1474341261427" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
+	</section>
 	<!-- Footer -->
 	<footer>
 		<div class="container">
@@ -319,6 +325,7 @@
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3&amp;sensor=false&amp;key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
