--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<!-- Menú -->
-	<nav class="navbar navbar-inverse navbar-static-top">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
@@ -20,16 +20,19 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">LEAN SIX SIGMA</a>
+				<a class="navbar-brand" href="#">
+					<!-- <img class="logo" src="img/logoMenu.png" alt="Lean Six Sigma"> -->
+					LEAN SIX SIGMA
+				</a>
 	    	</div>
 	    	<!-- Collect the nav links, forms, and other content for toggling -->
 	    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	    		<ul class="nav navbar-nav pull-right">
 	    			<li class="active"><a href="#">Bienvenida</a></li>
 	    			<li><a href="#">Oradores</a></li>
-	    			<li><a href="#">Agenda</a></li>
+	    			<li><a href="#agenda">Agenda</a></li>
 	    			<li><a href="#">Contacto</a></li>
-	    			<li><a href="#">Entradas</a></li>
+	    			<li><a href="#tickets">Entradas</a></li>
 	    		</ul>
 	    	</div><!-- /.navbar-collapse -->
     	</div><!-- /.container-fluid -->
@@ -44,16 +47,16 @@
 			</ol>
 			<div class="carousel-inner filter">
 				<!-- Primer Slide -->
-				<div class="item active">
+				<!-- <div class="item active">
 					<img src="img/logo.jpg" alt="">
 					<div class="container">
 						<div class="carousel-caption">
 							<h1></h1>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- SegundoSlide -->
-				<div class="item">
+				<div class="item active">
 					<div class="bg-filter1"></div>
 					<img src="img/event-1597531_1280.jpg" alt="">
 					<div class="container">
@@ -68,8 +71,8 @@
 					<img src="img/wtcTijuana.jpeg" alt="">
 					<div class="container">
 						<div class="carousel-caption">
-							<h1>La innovación es lo que dsitingue a un líder de los demás.</h1>
-							<h2>Steve Jobs</h2>
+							<h1>La innovación es lo que distingue a un líder de los demás.</h1>
+							<h3 class="lightTitle">Steve Jobs</h3>
 						</div>
 					</div>
 				</div>
