--- a/index.html
+++ b/index.html
@@ -299,8 +299,20 @@
 	</section>
 	<!-- Map -->
 	<section id="location">
-		<div id="map text-center">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3365.1822769776063!2d-116.936409!3d32.494557!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8cae59169abc3847!2sWorld+Trade+Center+Tijuana!5e0!3m2!1ses!2sus!4v1474341261427" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-xs-12">
+					<div id="map text-center">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3365.1822769776063!2d-116.936409!3d32.494557!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8cae59169abc3847!2sWorld+Trade+Center+Tijuana!5e0!3m2!1ses!2sus!4v1474341261427" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+					</div>
+				</div>
+				<div class="col-md-6 col-xs-12 facilities">
+					<h3>Transporte</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum amet, explicabo. Corporis quasi sapiente maiores minus molestias at quidem debitis dolorem odio dolorum cum vero aspernatur architecto, dolore ullam non.</p>
+					<h3>Estacionamiento</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quos ducimus maxime asperiores omnis ullam, dicta, praesentium accusamus fugiat similique. Itaque sunt cum maiores recusandae perferendis magni nam facilis deleniti.</p>
+				</div>
+			</div>
 		</div>
 	</section>
 	<!-- Footer -->
