Change nav color

--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
 	    	<!-- Collect the nav links, forms, and other content for toggling -->
 	    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	    		<ul class="nav navbar-nav pull-right">
-	    			<li class="active"><a href="#">Bienvenida</a></li>
-	    			<li><a href="#">Oradores</a></li>
+	    			<li class="active"><a href="#intro">Bienvenida</a></li>
+	    			<li><a href="#speakers">Oradores</a></li>
 	    			<li><a href="#agenda">Agenda</a></li>
-	    			<li><a href="#">Contacto</a></li>
 	    			<li><a href="#tickets">Entradas</a></li>
 	    		</ul>
 	    	</div><!-- /.navbar-collapse -->
@@ -340,7 +339,6 @@
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3&amp;sensor=false&amp;key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
