Imagenes de ponentes en agenda

--- a/index.html
+++ b/index.html
@@ -143,40 +143,45 @@
 						    	<thead>
 									<tr>
 								        <th class="col-md-1">#</th>
-								        <th class="col-md-2"></th>
+								        <th class="col-md-1"></th>
 										<th class="col-md-3">Tallerista</th>
-										<th class="col-md-4">Taller</th>
+										<th class="col-md-3">Taller</th>
 										<th class="col-md-2">Hora</th>
+										<th class="col-md-2">Track</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
 										<td>1</td>
-										<td></td>
+										<td><div class="img-frame speaker1"></div></td>
 										<td>Leoncio Castillo</td>
 										<td>Rapid Problem Solving</td>
 										<td>08:30 - 10:30</td>
+										<td>Track 1</td>
 									</tr>
 									<tr>
 										<td>2</td>
-										<td></td>
+										<td><div class="img-frame speaker2"></div></td>
 										<td>Alma Loera</td>
 										<td>VALUE STREAM MAPPING FOR SERVICE PROCESSES</td>
 										<td>10:30 - 12:30</td>
+										<td>Track 2</td>
 									</tr>
 									<tr>
 										<td>3</td>
-										<td></td>
+										<td><div class="img-frame speaker3"></div></td>
 										<td>José Solis</td>
 										<td>PLANNING YOUR LEAN JOURNING: USING THE X MATRIX</td>
 										<td>08:30 - 10:30</td>
+										<td>Track 3</td>
 									</tr>
 									<tr>
 										<td>4</td>
-										<td></td>
+										<td><div class="img-frame speaker4"></div></td>
 										<td>Luis Enrique Romero</td>
 										<td>EFFECTIVE VISUAL MANAGEMENT WITH KAMISHIBAI CARDS</td>
 										<td>08:30 - 10:30</td>
+										<td>Track 4</td>
 									</tr>
 						      	</tbody>
 						    </table>
@@ -189,7 +194,7 @@
 						    	<thead>
 									<tr>
 								        <th class="col-md-1">#</th>
-								        <th class="col-md-2"></th>
+								        <th class="col-md-1"></th>
 										<th class="col-md-3">Orador</th>
 										<th class="col-md-4">Conferencia</th>
 										<th class="col-md-2">Hora</th>
@@ -198,14 +203,14 @@
 								<tbody>
 									<tr>
 										<td>1</td>
-										<td></td>
+										<td></div></td>
 										<td>Juan Esquivel</td>
 										<td>LESSONS FROM THE FIELD: APPLYING LEAN TO IMPROVE THE HR FUNCTION</td>
 										<td>13:00 - 14:00</td>
 									</tr>
 									<tr>
 										<td>2</td>
-										<td></td>
+										<td><div class="img-frame speaker6"></div></td>
 										<td>Alejandro Martínez</td>
 										<td>COACHING: A TOOL TO DEVELOP LEADERS</td>
 										<td>14:00 - 15:00</td>
@@ -226,7 +231,7 @@
 									</tr>
 									<tr>
 										<td>5</td>
-										<td></td>
+										<td><div class="img-frame speaker5"></td>
 										<td>Isela Vargas</td>
 										<td>ISO 18404 E ISO 13053 A STANDARD FOR PROCESS IMPROVEMENT</td>
 										<td>10:30 - 12:30</td>
