--- a/index.html
+++ b/index.html
@@ -251,53 +251,41 @@
 		<div class="bg-image3">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12">
-						<h2 class="text-center">Entradas</h2>
+					<div class="col-md-12 titles">
+						<h2 class="text-center">Adquiere tu entrada</h2>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-4 col-xs-12">
+					<div class="col-md-6 col-xs-12">
 						<div class="ticketsPrices">
 							<div class="price text-center">
-								<p class="bold">$240</p>
+								<p class="bold">$1,500</p>
 							</div>
 							<div class="titlePrice text-center">
-								<p class="bold">Entrada 1</p>
+								<p class="bold">Precio Especial</p>
 							</div>
 							<div class="description text-center">
-								<p>Antes del 20 de Octubre</p>
-								<div class="text-center"><button class="action3">Comprar ahora</button></div>
+								<p>Si adquieres tu entrada en Octubre</p>
+								<p>Costo por persona</p>
+								<button class="btn-general action3">Comprar ahora</button>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4 col-xs-12">
+					<div class="col-md-6 col-xs-12">
 						<div class="ticketsPrices">
 							<div class="price text-center">
-								<p class="bold">$200</p>
+								<p class="bold">$1,800</p>
 							</div>
 							<div class="titlePrice text-center">
-								<p class="bold">Entrada 2</p>
+								<p class="bold">Precio normal</p>
 							</div>
 							<div class="description text-center">
-								<p>Antes del 20 de Octubre</p>
-								<div class="text-center"><button class="action3">Comprar ahora</button></div>
+								<p>A partir del 31 de Octubre</p>
+								<p>Costo por persona</p>
+								<button class="btn-general action3">Comprar ahora</button>
 							</div>
 						</div>
 					</div>	
-					<div class="col-md-4 col-xs-12">
-						<div class="ticketsPrices">
-							<div class="price text-center">
-								<p class="bold">$140</p>
-							</div>
-							<div class="titlePrice text-center">
-								<p class="bold">Entrada 3</p>
-							</div>
-							<div class="description text-center">
-								<p>Antes del 20 de Octubre</p>
-								<div class="text-center"><button class="action3">Comprar ahora</button></div>
-							</div>
-						</div>
-					</div>		
 				</div>
 			</div>
 		</div>
