--- a/index.html
+++ b/index.html
@@ -103,24 +103,32 @@
 		<div class="bg-image2">
 			<div class="container">
 				<div class="col-md-3 col-xs-6 data">
-					<p class="iconData"><i class="fa fa-microphone fa-5x" aria-hidden="true"></i></p>
-					<p class="category">Oradores</p>
-					<p class="number">20</p>
+					<p class="iconData"><i class="fa fa-map-marker fa-4x" aria-hidden="true"></i></p>
+					<div class="dataDescription">
+						<p class="category">Ubicación</p>
+						<p class="info">WTC Tijuana</p>
+					</div>
 				</div>
 				<div class="col-md-3 col-xs-6 data">
-					<p class="iconData"><i class="fa fa-lightbulb-o fa-5x" aria-hidden="true"></i></p>
-					<p class="category">Participantes</p>
-					<p class="number">20</p>
+					<p class="iconData"><i class="fa fa-calendar fa-4x" aria-hidden="true"></i></p>
+					<div class="dataDescription">
+						<p class="category">Fecha</p>
+						<p class=info>26 Noviembre</p>
+					</div>
 				</div>
 				<div class="col-md-3 col-xs-6 data">
-					<p class="iconData"><i class="fa fa-cogs fa-5x" aria-hidden="true"></i></p>
-					<p class="category">Talleres</p>
-					<p class="number">20</p>
+					<p class="iconData"><i class="fa fa-microphone fa-4x" aria-hidden="true"></i></p>
+					<div class="dataDescription">
+						<p class="category">Speakers</p>
+						<p class="info">12</p>
+					</div>
 				</div>
 				<div class="col-md-3 col-xs-6 data">
-					<p class="iconData"><i class="fa fa-coffee fa-5x" aria-hidden="true"></i></p>
-					<p class="category">Tazas de café</p>
-					<p class="number">20</p>
+					<p class="iconData"><i class="fa fa-users fa-4x" aria-hidden="true"></i></p>
+					<div class="dataDescription">
+						<p class="category">500 asientos</p>
+						<p class="info">Date prisa!</p>
+					</div>
 				</div>
 			</div>
 		</div>
