Fix numbers in mobile/ change logo color

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="#">
-					<!-- <img class="logo" src="img/logoMenu.png" alt="Lean Six Sigma"> -->
-					LEAN SIX SIGMA
+					<img class="logo xs-hidden" src="img/logoBlanco.png" alt="Lean Six Sigma">
+					<!-- LEAN SIX SIGMA -->
 				</a>
 	    	</div>
 	    	<!-- Collect the nav links, forms, and other content for toggling -->
@@ -60,7 +60,10 @@
 					<img src="img/event-1597531_1280.jpg" alt="">
 					<div class="container">
 						<div class="carousel-caption">
-							<div class="title"><p class="lightTitle">6to Congreso Internacional</p> Lean Six Sigma</div>
+							<div class="title">
+								<p class="lightTitle">6to Congreso Internacional</p> Lean Six Sigma
+								<!-- <img src="img/logoSF1.png" alt=""> -->
+							</div>
 						</div>
 					</div>
 				</div>
@@ -102,28 +105,28 @@
 	<section id="numbers">
 		<div class="bg-image2">
 			<div class="container">
-				<div class="col-md-3 col-xs-6 data">
+				<div class="col-md-3 col-xs-12 data">
 					<p class="iconData"><i class="fa fa-map-marker fa-4x" aria-hidden="true"></i></p>
 					<div class="dataDescription">
 						<p class="category">Ubicación</p>
 						<p class="info">WTC Tijuana</p>
 					</div>
 				</div>
-				<div class="col-md-3 col-xs-6 data">
+				<div class="col-md-3 col-xs-12 data">
 					<p class="iconData"><i class="fa fa-calendar fa-4x" aria-hidden="true"></i></p>
 					<div class="dataDescription">
 						<p class="category">Fecha</p>
 						<p class=info>26 Noviembre</p>
 					</div>
 				</div>
-				<div class="col-md-3 col-xs-6 data">
+				<div class="col-md-3 col-xs-12 data">
 					<p class="iconData"><i class="fa fa-microphone fa-4x" aria-hidden="true"></i></p>
 					<div class="dataDescription">
 						<p class="category">Speakers</p>
 						<p class="info">12</p>
 					</div>
 				</div>
-				<div class="col-md-3 col-xs-6 data">
+				<div class="col-md-3 col-xs-12 data">
 					<p class="iconData"><i class="fa fa-users fa-4x" aria-hidden="true"></i></p>
 					<div class="dataDescription">
 						<p class="category">500 asientos</p>
